Add rendering of selected bus stops

--- a/src/components/css/StopSelector.css
+++ b/src/components/css/StopSelector.css
@@ -12,3 +12,9 @@
 .selector-separator {
     margin-top: 1em;
 }
+
+.selector-line-number {
+    width: 2em;
+    display: inline-block;
+    text-align: center;
+}
