StopSelector: Move remove stop -button to top of screen

--- a/src/components/css/StopSelector.css
+++ b/src/components/css/StopSelector.css
@@ -39,3 +39,9 @@
     display: block;
     margin: auto;
 }
+
+@media only screen and (max-width: 767px) {
+    .selector-title-button {
+        margin-bottom: 1em;
+    }
+}
